tests/files/success/variable_shadowing.sol
let x = 1;
print("x: ", x);
{
    let x = 2;
    print("x: ", x);
}

let x = 3;
print("x: ", x);
