tests/files/fail/dynamic_typing.sol
let mut x = "wow";
print("x as string: ", x);
x = 2;
print("x as number: ", x);
